--- a/RacingAI/RacingAI.uproject
+++ b/RacingAI/RacingAI.uproject
@@ -7,7 +7,11 @@
 		{
 			"Name": "RacingAI",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"PhysXVehicles",
+				"Engine"
+			]
 		}
 	],
 	"Plugins": [
